# alfred

./: .gitignore  install.txt
alfred/: CMakeLists.txt  package.xml
alfred/launch/: alfred.launch  alfred_highlevel.launch  alfred_move.launch  alfred_sensor.launch
alfred_collision_scene/: CMakeLists.txt  package.xml
alfred_collision_scene/launch/: collision_scene.launch
alfred_collision_scene/src/: collision_scene_node.cpp
alfred_cortex/: CMakeLists.txt  package.xml
alfred_cortex/launch/: alfred_cortex.launch
alfred_cortex/src/: alfred_cortex_node.py  cortex.py
alfred_joy/: CMakeLists.txt  package.xml
alfred_joy/launch/: alfred_teleop.launch
alfred_joy/src/: alfred_teleop_node.cpp  xboxdrv.sh
alfred_occipital_lobe/: CMakeLists.txt  package.xml
alfred_occipital_lobe/launch/: alfred_occipital_lobe.launch  camera.launch
alfred_occipital_lobe/src/: alfred_occipital_lobe_node.cpp
alfred_occipital_lobe/trained/: numbers.xml
alfred_perception/alfred_haarcascade/: CMakeLists.txt  package.xml
alfred_perception/ball_detection/: CMakeLists.txt  package.xml
alfred_perception/gspeech/: CMakeLists.txt  package.xml
alfred_perception/kalman_tracker/: CMakeLists.txt  package.xml
ball_detection/: CMakeLists.txt  package.xml
ball_detection/cfg/: BallDetection.cfg
ball_detection/launch/: ball_detection.launch
ball_detection/src/: find_circle.cpp
g3_collision_scene/: CMakeLists.txt  package.xml
g3_collision_scene/scenes/: kitchen.scene
g3_collision_scene/src/: collision_scene_node.cpp
gspeech/launch/: gspeech.launch
gspeech/src/: gspeech_node.py
high_level/: CMakeLists.txt  package.xml
moveit_fake_controller_manager/src/: moveit_fake_controller_manager.cpp
qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  xbox_controller.cbp
qtcreator-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtcreator-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
qtcreator-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
ra1_pro/: CMakeLists.txt  package.xml  urdf.rviz
ra1_pro/launch/: display.launch  ra1_pro.launch
ra1_pro/src/: RA1_PRO_node.py  motor_driver.py
ra1_pro/urdf/: ra1_pro.urdf
ra1_pro_collision_scene/: CMakeLists.txt  package.xml
ra1_pro_collision_scene/launch/: collision_scene.launch
ra1_pro_collision_scene/src/: collision_scene_node.cpp  test_manage_service_node.cpp
ra1_pro_gripper_server/: CMakeLists.txt  package.xml
ra1_pro_gripper_server/include/ra1_pro_gripper_server/: electric_parallel_gripper.h
ra1_pro_gripper_server/launch/: ra1_pro_gripper_server.launch
ra1_pro_gripper_server/src/: gripper_action_server.cpp
ra1_pro_move/: package.xml
ra1_pro_move/scripts/: set_arm_pose_client.py
ra1_pro_move/src/: ra1_pro_move_node.cpp
ra1_pro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ra1_pro_moveit_config/config/: alfred.srdf  controllers.yaml  joint_limits.yaml  ompl_planning.yaml
ra1_pro_moveit_config/launch/: alfred_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_sim.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ra1_pro_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ra1_pro_moveit_controller_manager/: CMakeLists.txt  package.xml  ra1_pro_moveit_controller_manager_plugin_description.xml
ra1_pro_moveit_controller_manager/src/: ra1_pro_moveit_controller_manager.cpp
ra1_pro_movements/g3_joint_states_listener/: CMakeLists.txt  package.xml
ra1_pro_movements/g3_move_arms_cartesian/: CATKIN_IGNORE  package.xml
ra1_pro_movements/ra1_pro_joint_states_listener/: CMakeLists.txt  package.xml
ra1_pro_movements/ra1_pro_move/: CMakeLists.txt
ra1_pro_movements/ra1_pro_move_cartesian/: CMakeLists.txt  (+1 more)
ra1_pro_msgs/: CMakeLists.txt  package.xml
xbox_controller/: CMakeLists.txt  package.xml
(+67 files in other folders)
