<?xml version="1.0"?>
<package>
  <name>ra1_pro</name>
  <version>0.0.0</version>
  <description>The ra1_pro package</description>

  <maintainer email="konstantin.lassnig@gmail.com">kl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ra1_pro_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ra1_pro_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
