<?xml version="1.0"?>
<package>
  <name>ra1_pro_gripper_server</name>
  <version>0.0.1</version>
  <description>Provides an action server for controlling RA1_Pro grippers</description>

  <maintainer email="konstantin.lassnig@gmail.com">Konstantin Lassnig</maintainer>

  <license>BSD</license>

  <author email="konstantin.lassnig@gmail.com">Konstantin Lassnig</author>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
<!--  <build_depend>baxter_core_msgs</build_depend> -->

  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
<!--  <run_depend>baxter_core_msgs</run_depend> -->

  <export>
  </export>
</package>




