<package>
  <name>ra1_pro_moveit_controller_manager</name>
  <version>0.0.1</version>
  <description>A RA1 Pro controller manager plugin for MoveIt.</description>
  <author email="konstantin.lassnig@gmail.com">Konstantin Lassnig</author>
  <maintainer email="konstantin.lassnig@gmail.com">Konstantin Lassnig</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <moveit_core plugin="${prefix}/ra1_pro_moveit_controller_manager_plugin_description.xml"/>
  </export>

</package>
